# chronicles-of-many-ages

./: .gitignore  README.md  pyproject.toml  run_game.py  run_gui.py  遊戲製作.md
src/coma_engine/: __init__.py  __main__.py  runner.py
src/coma_engine/actions/: __init__.py  catalog.py  models.py
src/coma_engine/config/: __init__.py  schema.py
src/coma_engine/core/: __init__.py  enums.py  state.py  transfers.py
src/coma_engine/explain/: __init__.py  api.py  service.py
src/coma_engine/gui/: __init__.py  app.py  session.py  types.py
src/coma_engine/gui/interaction/: __init__.py  camera_controller.py  command_router.py  intervention_controller.py  overlay_controller.py  selection_controller.py  time_controller.py
src/coma_engine/gui/presentation/: __init__.py  entity_panels.py  explain_presenter.py  guidance_presenter.py  intervention_presenter.py  labels.py  schemas.py  timeline_presenter.py  visibility.py
src/coma_engine/gui/render/: __init__.py  main_window.py  map_scene.py  map_view.py
src/coma_engine/gui/sync/: __init__.py  entity_projector.py  (+6 more)
src/coma_engine/models/: __init__.py  entities.py  perception.py
src/coma_engine/player/: __init__.py  interventions.py
src/coma_engine/scenario/: __init__.py  base.py
src/coma_engine/simulation/: engine.py  phases.py
src/coma_engine/systems/: __init__.py  events.py  generation.py  modifiers.py  propagation.py  relations.py  spatial.py
tests/: test_core_invariants.py  test_gui_gameplay_layer.py  test_gui_intervention_bridge.py  test_gui_projection_invariants.py  test_gui_visibility_rules.py
(+23 files in other folders)
