[project]
name = "chronicles-of-many-ages"
version = "0.1.0"
description = "Formal core simulation backbone for Chronicles of Many Ages"
requires-python = ">=3.12"

[project.optional-dependencies]
gui = ["PySide6>=6.8,<7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
